src/components/table/cells/z-th/styles.css
@import "../z-table-cells.css";

:host {
  z-index: 1;
  padding: 0;
  background-color: var(--color-surface02);
  font-weight: var(--font-sb);
}

.cell--content {
  padding: calc(var(--space-unit) * 2);
}

:host([show-sorting]) .cell--content {
  column-gap: var(--space-unit);
}

.z-th--sort-button {
  padding: 0;
  border: none;
  background-color: transparent;
  cursor: pointer;
  outline: none;
}

@media (min-width: 768px) and (hover: hover) {
  :host([show-sorting="hover"]) .z-th--sort-button {
    opacity: 0;
    pointer-events: none;
  }

  :host([show-sorting="hover"]:hover) .z-th--sort-button,
  :host([show-sorting="hover"]) .z-th--sort-button:focus:focus-visible,
  :host([show-sorting="always"]) .z-th--sort-button {
    opacity: 1;
    pointer-events: all;
  }
}

:host([show-sorting="hover"]:hover) .z-th--sort-button::after,
:host([show-sorting="hover"]) .z-th--sort-button:focus:focus-visible::after,
:host([show-sorting="always"]) .z-th--sort-button::after {
  position: absolute;
  top: 6px;
  left: 6px;
  width: calc(100% - 12px);
  height: calc(100% - 10px);
  background-color: transparent;
  content: "";
}

.z-th--sort-button:focus:focus-visible::after,
.z-th--sort-button--active::after {
  box-shadow: var(--shadow-focus-primary);
}

